// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonStyled should render the component 1`] = `
<label
  className="RadioButtonStyled__RadioButtonLabelStyled-gImHPA gjcxEu"
/>
`;

exports[`RadioButtonStyled should render the component passing inline property as true 1`] = `
<label
  className="RadioButtonStyled__RadioButtonLabelStyled-gImHPA jcuxCl"
/>
`;
